2007-07-30  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (update_color_buttons_from_string),
	(check_color_schemes_enabled), (color_button_clicked_cb),
	(style_init):
	* data/appearance.glade:

	Add tooltip foreground and background colours to the list of recognised
	symbolic colours.


2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): default to showing the background tab
	if wallpapers were given on the command line

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* data/gnome-appearance-properties.desktop.in.in: add %F to the exec
	line so external programs like epiphany can set the background (bug
	#456337)

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade:
	* appearance-themes.c: (theme_custom_cb):
	* theme-save.c: (save_dialog_response): only create the custom theme
	entry when changes are made, and delete it when the theme is saved.
	These changes obsolete the requirement for a modal details window.

2007-07-29  Denis Washington  <denisw@svn.gnome.org>

	* appearance.h:
	* appearance-desktop.c: (desktop_init):
	Don't store the cell renderer in AppearanceData, it is only needed by
	desktop_init().

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_message_area_update), (themes_init):
	cope with unset GConf keys, and group GConf notifications

2007-07-29  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (theme_selection_changed_cb),
	(background_or_font_changed), (themes_init):
	_Really_ only show background/font suggestions if they haven't
	already been applied.

2007-07-29  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (theme_selection_changed_cb):
	Only show background/font suggestions if they haven't already
	been applied.

2007-07-29  Denis Washington  <denisw@svn.gnome.org>

	* data/appearance.glade: